<resources>
    <string name="logo">Logo</string>
    <string name="version_postfix"></string>
    <string name="copyleft">Copyleft Feio 2015-2019</string>
    <string name="dev_site">http://www.iosue.it/federico</string>
    <string name="dev_github">https://github.com/federicoiosue</string>
    <string name="beta_link">https://play.google.com/apps/testing/it.feio.android.omninotes</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_url">http://goo.gl/ZXgBhz</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bitcoin_url">http://goo.gl/I6Xboe</string>
    <string name="help_online_url">https://goo.gl/Q843oh</string>
    <string name="title_item_list">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="title_activity_list">Omni Notes</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in notes</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="trash">Trash</string>
    <string name="trash_action">Trash</string>
    <string name="trashed">trashed</string>
    <string name="note_trashed">Note(s) trashed</string>
    <string name="note_untrashed">Note(s) restored from trash</string>
    <string name="untrash">Restore from trash</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note(s) deleted permanently</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Restore from archive</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_note_confirmation">Confirm note deletion?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="failed">failed</string>
    <string name="cancel">Cancel</string>
    <string name="note_updated">Note updated</string>
    <string name="empty_note_not_saved">Can\'t save an empty note</string>
    <string name="empty_note_not_shared">Can\'t share an empty note</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note restored from archive</string>
    <string name="note">Note</string>
    <string name="share_message_chooser">Share with</string>
    <string name="shared_content_sign">\n【by Omni Notes】</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_column">Sort by</string>
    <string name="tap_to_undo">Tap to undo</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="at_time">at</string>
    <string name="discard_changes">Discard changes</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="delete_selected_image">Delete selected attachment?</string>
    <string name="delete_all_attachments">Delete all the attachments?</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="timestamp">Timestamp</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remove location?</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="add_reminder">Add reminder</string>
    <string name="location_not_found">Location not found</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="no_app_to_handle_intent">No applications to handle file</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="video">Video</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="error_occurred_deleting_note">Error while deleting note</string>
    <string name="no_backups_available">No backups available</string>
    <string name="data_export_message">Insert backup name</string>
    <string name="data_import_message">Click -&gt; restore\nLong-click -&gt; delete</string>
    <string name="data_import_message_warning">WARNING: This will replace all current data!</string>
    <string name="data_export_completed">Data backup completed</string>
    <string name="data_export_failed">Data backup failed: check logcat for details</string>
    <string name="data_import_completed">Data restore completed</string>
    <string name="click_to_refresh_application">Click to refresh application</string>
    <string name="backup_existing">Backup already exist. It\'ll be overwritten</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="select_tags">Select tag(s)</string>
    <string name="categories">Categories</string>
    <string name="edit_tag">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Title</string>
    <string name="category_description">Description</string>
    <string name="category_color">Color</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_missing_title">Category title missing</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="category">Category</string>
    <string name="categorize_as">Categorize as</string>
    <string name="title_activity_category">Edit category</string>
    <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
    <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
    <string name="discard">Discard</string>
    <string name="remove_category">Remove category</string>
    <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
    <string name="no_categories_created">No categories have been created yet</string>
    <string name="notes_category_removed">Category removed from notes</string>
    <string name="notes_categorized_as">Notes categorized as</string>
    <string name="insert_security_password">Insert password</string>
    <string name="lock">Lock</string>
    <string name="save_note_to_lock_it">Save note to lock it</string>
    <string name="save_note_to_unlock_it">Save note to unlock it</string>
    <string name="unlock">Unlock</string>
    <string name="title_activity_password">Edit security password</string>
    <string name="title_activity_about">Info</string>
    <string name="deleted">deleted</string>
    <string name="no_items_in_list">Nothing here!</string>
    <string name="checklist_on">Enable checklist</string>
    <string name="checklist_off">Disable checklist</string>
    <string name="checklist_item_hint">New item</string>
    <string name="remove_checklist">Remove checklist?</string>
    <string name="checklist_keep_checked">Keep checked items</string>
    <string name="checklist_keep_symbols">Keep check marks</string>
    <string name="sketch">Sketch</string>
    <string name="crash_dialog_text">Something went wrong in Omni Notes\nSend automatic report to developer?</string>
    <string name="crash_dialog_comment_prompt">Insert comment here (optional):</string>
    <string name="crash_toast">Something went wrong in Omni Notes\nA report has been sent report to the developer!</string>
    <string name="new_update_available">A new version of Omni Notes is available, would you like to update?</string>
    <string name="update">Update and rate!</string>
    <string name="not_now">Not now</string>
    <string name="title_activity_sketch">Sketch</string>
    <string name="redo">Redo</string>
    <string name="colors">Colors</string>
    <string name="stroke">Stroke</string>
    <string name="erase_sketch">Erase sketch?</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="saturation">Saturation</string>
    <string name="opacity">Opacity</string>
    <string name="dismiss">Discard</string>
    <string name="snooze">Remind me later</string>
    <string name="error_importing_some_attachments">Error importing attachments</string>
    <string name="error_saving_attachments">Error saving attachments</string>
    <string name="proceed">Proceed</string>
    <string name="contracted_view">Reduced view</string>
    <string name="expanded_view">Expanded view</string>
    <string name="grid_view">Grid view</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="shortcut_added">Shortcut added to home screen</string>
    <string name="shortcut_note_deleted">Shortcut points to deleted note</string>
    <string name="widget_simple_description">Simple widget with buttons</string>
    <string name="widget_list_description">Scrolling list widget with buttons</string>
    <string name="notes">notes</string>
    <string name="show_thumbnails">Show attachment\'s thumbnails</string>
    <string name="show_timestamps">Show timestamps</string>
    <string name="choose_action">Choose action</string>
    <string name="edit">Edit</string>
    <string name="reminders">reminders</string>
    <string name="not_expired">not expired</string>
    <string name="expired">expired</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="open">Open</string>
    <string name="copy">Copy</string>
    <string name="no_application_can_perform_this_action">No application found for this action</string>
    <string name="eraser">Eraser</string>
    <string name="image">Image</string>
    <string name="error">Error</string>
    <string name="archived">archived</string>
    <string name="files">Files</string>
    <string name="merge">Merge</string>
    <string name="delete_merged">Delete original notes after merging?</string>
    <string name="not_set">not set</string>
    <string name="empty_trash">Empty trash</string>
    <string name="empty_trash_confirmation">Confirm deleting all trashed notes?</string>
    <string name="help">Help</string>
    <string name="online_manual">Online manual</string>
    <string name="tags_added">Tags added</string>
    <string name="working">Working...</string>
    <string name="imported">imported</string>
    <string name="synchronize">Synchronize</string>
    <string name="extracted">Extracted</string>
    <string name="select_all">Select all</string>
    <string name="search_location">Search location</string>
    <string name="use_current_location">Use current location</string>
    <string name="filter">Filter</string>
    <string name="info">Info</string>
    <string name="settings_about">Info</string>
    <string name="settings_screen_interface">Interface</string>
    <string name="settings_screen_notifications">Notifications</string>
    <string name="settings_screen_navigation">Navigation</string>
    <string name="settings_changelog">Changelog</string>
    <string name="settings_screen_data">Data</string>
    <string name="settings_category_preferences">Preferences</string>
    <string name="settings_category_beta">Beta</string>
    <string name="settings_category_about">About</string>
    <string name="settings_beta">Opt-In</string>
    <string name="settings_beta_summary">Subscribe to the beta program to keep up to date with the latest features</string>
    <string name="settings_tour_show_again">App tour</string>
    <string name="settings_tour_show_again_summary">Show me the application tour again</string>
    <string name="settings_screen_behaviors">Behaviors</string>
    <string name="settings_screen_privacy">Privacy</string>
    <string name="settings_statistics">Statistics</string>
    <string name="app_package" />
</resources>