<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:fitsSystemWindows="true">

    <PreferenceCategory android:title="@string/settings_category_preferences">

        <PreferenceScreen
                android:key="settings_data"
                android:title="@string/settings_screen_data"/>

        <PreferenceScreen
                android:key="settings_interface"
                android:title="@string/settings_screen_interface"/>

        <PreferenceScreen
                android:key="settings_navigation"
                android:title="@string/settings_screen_navigation"/>

        <PreferenceScreen
                android:key="settings_behaviors"
                android:title="@string/settings_screen_behaviors"/>

        <PreferenceScreen
                android:key="settings_notifications"
                android:title="@string/settings_screen_notifications"/>

        <PreferenceScreen
                android:key="settings_privacy"
                android:title="@string/settings_screen_privacy"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category_beta">
        <Preference
                android:key="settings_beta"
                android:summary="@string/settings_beta_summary"
                android:title="@string/settings_beta">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/beta_link"/>
        </Preference>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/help">

        <Preference
                android:key="settings_online_manual"
                android:title="@string/online_manual">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/help_online_url"/>
        </Preference>

        <Preference
                android:key="settings_tour_show_again"
                android:title="@string/settings_tour_show_again"
                android:summary="@string/settings_tour_show_again_summary"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_category_about">

        <Preference
                android:key="settings_changelog"
                android:title="@string/settings_changelog"/>

        <Preference
                android:title="@string/settings_statistics">
            <intent android:targetPackage="@string/app_package"
                    android:targetClass="it.feio.android.omninotes.StatsActivity"/>
        </Preference>

        <Preference
                android:title="@string/settings_about">
            <intent android:targetPackage="@string/app_package"
                    android:targetClass="it.feio.android.omninotes.AboutActivity"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
